# streaming-assistants-demo

./: .env.bkp  .gitignore  README.md  pyproject.toml  run.py
streamer/: imageGeneration.py  main.py  streamingAssistant.py  streamingAssistantCLI.py
streamer/static/: index.html  script.js  styles.css
tests/: testImageGen.py
