[tool.poetry]
name = "streamer"
version = "0.1.0"
description = ""
authors = ["phact <estevezsebastian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.1.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
ftfy = "^6.1.3"
regex = "^2023.10.3"
tqdm = "^4.66.1"
clip = {git = "https://github.com/openai/CLIP.git"}
clip-interrogator = "^0.6.0"
openai = "^1.3.5"
python-dotenv = "^1.0.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
partial-json-parser = "^0.1.2.1"
streaming-assistants = "^0.3.0"

[tool.poetry.scripts]
start = "run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
